--- a/custom_components/nilm_energy_disaggregation/manifest.json
+++ b/custom_components/nilm_energy_disaggregation/manifest.json
@@ -9,7 +9,12 @@
         "scikit-learn>=0.24.0",
         "pandas>=1.3.0"
     ],
-    "codeowners": ["@yourusername"],
+    "codeowners": ["@dtanonDev"],
     "iot_class": "local_polling",
-    "description": "Non-Intrusive Load Monitoring for energy disaggregation"
+    "description": "Non-Intrusive Load Monitoring for energy disaggregation",
+    "quality_scale": "silver",
+    "zeroconf": [],
+    "homekit": {},
+    "bluetooth": [],
+    "integration_type": "service"
 }
