--- a/custom_components/nilm_energy_disaggregation/manifest.json
+++ b/custom_components/nilm_energy_disaggregation/manifest.json
@@ -4,11 +4,13 @@
     "version": "0.1.0",
     "config_flow": true,
     "documentation": "https://github.com/dtanonDev/nilm_energy_disaggregation",
+    "issue_tracker": "https://github.com/dtanonDev/nilm_energy_disaggregation/issues",
     "requirements": [
         "numpy>=1.21.0",
         "scikit-learn>=0.24.0",
         "pandas>=1.3.0"
     ],
+    "dependencies": [],
     "codeowners": ["@dtanonDev"],
     "iot_class": "local_polling",
     "description": "Non-Intrusive Load Monitoring for energy disaggregation",
