--- a/custom_components/nilm_energy_disaggregation/manifest.json
+++ b/custom_components/nilm_energy_disaggregation/manifest.json
@@ -1,14 +1,14 @@
 {
     "domain": "nilm_energy_disaggregation",
     "name": "NILM Energy Disaggregation",
-    "version": "0.1.0",
+    "version": "1.0.0",
     "config_flow": true,
     "documentation": "https://github.com/dtanonDev/nilm_energy_disaggregation",
     "issue_tracker": "https://github.com/dtanonDev/nilm_energy_disaggregation/issues",
     "requirements": [
-        "numpy>=1.21.0",
-        "scikit-learn>=0.24.0",
-        "pandas>=1.3.0"
+        "numpy>=1.21.0,<2.0.0",
+        "scikit-learn>=0.24.0,<2.0.0",
+        "pandas>=1.3.0,<2.0.0"
     ],
     "dependencies": [],
     "codeowners": ["@dtanonDev"],
