--- a/custom_components/nilm_energy_disaggregation/manifest.json
+++ b/custom_components/nilm_energy_disaggregation/manifest.json
@@ -1,23 +1,17 @@
 {
     "domain": "nilm_energy_disaggregation",
     "name": "NILM Energy Disaggregation",
-    "version": "1.0.2",
+    "codeowners": ["@dtanonDev"],
     "config_flow": true,
+    "dependencies": [],
     "documentation": "https://github.com/dtanonDev/nilm_energy_disaggregation",
+    "homekit": {},
+    "iot_class": "local_polling",
     "issue_tracker": "https://github.com/dtanonDev/nilm_energy_disaggregation/issues",
     "requirements": [
         "numpy>=1.21.0,<2.0.0",
         "scikit-learn>=0.24.0,<2.0.0",
         "pandas>=1.3.0,<2.0.0"
     ],
-    "dependencies": [],
-    "codeowners": ["@dtanonDev"],
-    "iot_class": "local_polling",
-    "description": "Non-Intrusive Load Monitoring for energy disaggregation",
-    "quality_scale": "silver",
-    "zeroconf": [],
-    "homekit": {},
-    "bluetooth": [],
-    "integration_type": "service",
-    "min_ha_version": "2023.1.0"
+    "version": "1.0.3"
 }
