--- a/custom_components/nilm_energy_disaggregation/manifest.json
+++ b/custom_components/nilm_energy_disaggregation/manifest.json
@@ -13,5 +13,5 @@
         "scikit-learn>=0.24.0,<2.0.0",
         "pandas>=1.3.0,<2.0.0"
     ],
-    "version": "1.0.3"
+    "version": "v1.0.3"
 }
