feat: add integration icon

--- a/custom_components/nilm_energy_disaggregation/manifest.json
+++ b/custom_components/nilm_energy_disaggregation/manifest.json
@@ -12,5 +12,6 @@
     ],
     "version": "v1.0.4",
     "config_flow": true,
-    "iot_class": "local_polling"
+    "iot_class": "local_polling",
+    "icon": "nilm.svg"
 }
